--- a/src/components/Layout/DashboardSideBar/index.scss
+++ b/src/components/Layout/DashboardSideBar/index.scss
@@ -1,4 +1,5 @@
 .sidebar {
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -71,6 +72,7 @@
       border-left: 4px solid rgba(24, 117, 240);
 
     }
+    
 
     .profile {
       margin-top: 1.5rem;
